Reduce dependency on MySQL.

--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -25,7 +25,7 @@ default = [
     "tardis/crypto",
     "tardis/web-server",
     "tardis/web-client",
-    "tardis/reldb",
+    "tardis/reldb-postgres",
     "tardis/cache",
 ]
 # TODO remvoe
