--- a/spi/spi-search/Cargo.toml
+++ b/spi/spi-search/Cargo.toml
@@ -20,6 +20,7 @@ name = "bios_spi_search"
 path = "src/lib.rs"
 
 [features]
+default = ["spi-pg"]
 spi-pg = ["tardis/reldb-postgres"]
 
 [dependencies]
