--- a/spi/spi-search/Cargo.toml
+++ b/spi/spi-search/Cargo.toml
@@ -25,9 +25,12 @@ spi-pg = ["tardis/reldb-postgres"]
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
-tardis = { version = "0.1.0-alpha31", features = ["reldb-postgres", "web-server"] }
+tardis = { version = "0.1.0-alpha32", features = [
+    "reldb-postgres",
+    "web-server",
+] }
 bios-basic = { path = "../../basic", features = ["default"] }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha31", features = ["test"] }
+tardis = { version = "0.1.0-alpha32", features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
