--- a/core/gatewayv2/apisix/conf/config-default.yaml
+++ b/core/gatewayv2/apisix/conf/config-default.yaml
@@ -472,6 +472,7 @@ plugins:                          # plugin list (sorted by priority)
   - serverless-post-function       # priority: -2000
   - ext-plugin-post-req            # priority: -3000
   - ext-plugin-post-resp           # priority: -4000
+  - auth-bios
 
 stream_plugins: # sorted by priority
   - ip-restriction                 # priority: 3000
