--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,25 @@
 [workspace]
 
-members = [
-    "basic",
-    "core/iam",
-    "core/auth",
-    "spi/*",
-    "services/*",
-]
+members = ["basic", "core/iam", "core/auth", "spi/*", "services/*"]
+
+[workspace.package]
+version = "0.1.0"
+authors = ["gudaoxuri <i@sunisle.org>"]
+homepage = "https://bios.idealworld.group"
+documentation = "https://bios.idealworld.group"
+repository = "https://github.com/ideal-world/bios"
+license = "Apache-2.0"
+edition = "2021"
+readme = "README.adoc"
+publish = false
+
+[workspace.dependencies]
+serde = { version = "1", features = ["derive"] }
+async-trait = { version = "0.1" }
+lazy_static = { version = "1" }
+itertools = { version = "0" }
+fancy-regex = { version = "0" }
+tardis = { version = "0.1.0-alpha35" }
+
+[workspace.dev-dependencies]
+tardis = { version = "0.1.0-alpha35", features = ["test"] }
