--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bios-basic"
-version = "0.1.0"
-authors = ["gudaoxuri <i@sunisle.org>"]
-homepage = "https://bios.idealworld.group"
-documentation = "https://bios.idealworld.group"
-repository = "https://github.com/ideal-world/bios"
-license = "Apache-2.0"
-edition = "2021"
-readme = "README.adoc"
-publish = false
+version.workspace = true
+authors.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+repository.workspace = true
+license.workspace = true
+edition.workspace = true
+readme.workspace = true
+publish.workspace = true
 
 [profile.release]
 lto = true
@@ -34,15 +34,15 @@ sdk = ["tardis", "tardis/web-client"]
 test = ["tardis/test"]
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-async-trait = { version = "0.1" }
-lazy_static = { version = "1" }
-itertools = { version = "0" }
-fancy-regex = { version = "0" }
-tardis = { version = "0.1.0-alpha33", optional = true }
+serde.workspace = true
+async-trait.workspace = true
+lazy_static.workspace = true
+itertools.workspace = true
+fancy-regex.workspace = true
+tardis = { workspace = true, optional = true }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha33", features = ["test"] }
+tardis.workspace = true
 
 [[test]]
 name = "test_rbum"
