--- a/core/auth/Cargo.toml
+++ b/core/auth/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bios-auth"
-version = "0.1.0"
-authors = ["gudaoxuri <i@sunisle.org>"]
-homepage = "https://bios.idealworld.group"
-documentation = "https://bios.idealworld.group"
-repository = "https://github.com/ideal-world/bios"
-license = "Apache-2.0"
-edition = "2021"
-readme = "README.adoc"
-publish = false
+version.workspace = true
+authors.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+repository.workspace = true
+license.workspace = true
+edition.workspace = true
+readme.workspace = true
+publish.workspace = true
 
 [profile.release]
 lto = true
@@ -20,16 +20,10 @@ name = "bios_auth"
 path = "src/lib.rs"
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-itertools = { version = "0" }
-lazy_static = { version = "1" }
-tardis = { version = "0.1.0-alpha33", features = [
-    "cache",
-    "crypto",
-    "web-server",
-] }
-# TODO remove
-redis = { version = "0.22", features = ["tokio-comp", "tokio-native-tls-comp"] }
+serde.workspace = true
+itertools.workspace = true
+lazy_static.workspace = true
+tardis = { workspace = true, features = ["cache", "crypto", "web-server"] }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha33", features = ["test", "web-client"] }
+tardis = { workspace = true, features = ["test", "web-client"] }
