--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bios-iam"
-version = "0.1.0"
-authors = ["gudaoxuri <i@sunisle.org>"]
-homepage = "https://bios.idealworld.group"
-documentation = "https://bios.idealworld.group"
-repository = "https://github.com/ideal-world/bios"
-license = "Apache-2.0"
-edition = "2021"
-readme = "README.adoc"
-publish = false
+version.workspace = true
+authors.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+repository.workspace = true
+license.workspace = true
+edition.workspace = true
+readme.workspace = true
+publish.workspace = true
 
 [profile.release]
 lto = true
@@ -25,11 +25,11 @@ ldap_server = ["ldap3_proto", "tardis/future", "tokio-util"]
 ldap_client = ["ldap3"]
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-async-trait = { version = "0" }
-lazy_static = { version = "1" }
-itertools = { version = "0" }
-tardis = { version = "0.1.0-alpha33", features = [
+serde.workspace = true
+async-trait.workspace = true
+lazy_static.workspace = true
+itertools.workspace = true
+tardis = { workspace = true, features = [
     "reldb-postgres",
     "cache",
     "mq",
@@ -40,10 +40,10 @@ tardis = { version = "0.1.0-alpha33", features = [
 bios-basic = { path = "../../basic", features = ["default", "with-mq"] }
 
 # ldap
-ldap3_proto = { version = "0.2.3", optional = true }
+ldap3_proto = { version = "0.3", optional = true }
 tokio-util = { version = "0.7", optional = true }
-ldap3 = { version = "0.10.5", optional = true }
+ldap3 = { version = "0.11", optional = true }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha33", features = ["test"] }
+tardis = { workspace = true, features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
