--- a/ext/chat/chat-basic/Cargo.toml
+++ b/ext/chat/chat-basic/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bios-chat-basic"
-version = "0.1.0"
-authors = ["gudaoxuri <i@sunisle.org>"]
-homepage = "https://bios.idealworld.group"
-documentation = "https://bios.idealworld.group"
-repository = "https://github.com/ideal-world/bios"
-license = "Apache-2.0"
-edition = "2021"
-readme = "README.adoc"
-publish = false
+version.workspace = true
+authors.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+repository.workspace = true
+license.workspace = true
+edition.workspace = true
+readme.workspace = true
+publish.workspace = true
 
 [profile.release]
 lto = true
@@ -20,9 +20,9 @@ name = "bios_chat_basic"
 path = "src/lib.rs"
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-tardis = { version = "0.1.0-alpha33" }
+serde.workspace = true
+tardis = { workspace = true }
 bios-basic = { path = "../../../basic", features = ["sdk"] }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha33", features = ["test"] }
+tardis = { workspace = true, features = ["test"] }
