--- a/spi/spi-reldb/Cargo.toml
+++ b/spi/spi-reldb/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bios-spi-reldb"
-version = "0.1.0"
-authors = ["gudaoxuri <i@sunisle.org>"]
-homepage = "https://bios.idealworld.group"
-documentation = "https://bios.idealworld.group"
-repository = "https://github.com/ideal-world/bios"
-license = "Apache-2.0"
-edition = "2021"
-readme = "README.adoc"
-publish = false
+version.workspace = true
+authors.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+repository.workspace = true
+license.workspace = true
+edition.workspace = true
+readme.workspace = true
+publish.workspace = true
 
 [profile.release]
 lto = true
@@ -26,14 +26,11 @@ spi-mysql = ["tardis/reldb-mysql"]
 
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-lazy_static = { version = "1" }
-tardis = { version = "0.1.0-alpha33", features = [
-    "reldb-postgres",
-    "web-server",
-] }
+serde.workspace = true
+lazy_static.workspace = true
+tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha33", features = ["test"] }
+tardis = { workspace = true, features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
