--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["basic", "core/iam", "core/auth", "spi/*", "services/*"]
 
 [workspace.package]
 version = "0.1.0"
-authors = ["gudaoxuri <i@sunisle.org>"]
+authors = ["gudaoxuri <i@sunisle.org>","hermitCode <17743125563@163.com>","RWDai <rwdai@foxmail.com>"]
 homepage = "https://bios.idealworld.group"
 documentation = "https://bios.idealworld.group"
 repository = "https://github.com/ideal-world/bios"
