--- a/.github/workflows/service-all-push.yml
+++ b/.github/workflows/service-all-push.yml
@@ -4,7 +4,8 @@ on:
   push:
     paths:
       - "basic/**"
-      - "core/iam/**"
+      - "support/iam/**"
+      - "support/auth/**"
       - "services/**"
       - ".github/workflows/service-all-push.yml"
 
