--- a/gateway/example/mock_auth.conf
+++ b/gateway/example/mock_auth.conf
@@ -14,7 +14,7 @@ http {
         listen 80;
 
         location / {
-            return 200 '{"code":200,"data":{"allow":true}}';
+            return 200 '{"code":"200","data":{"allow":true,"reason":""}}';
         }
 
         location /static/ {
