--- a/services/bios-all/config/conf-default.toml
+++ b/services/bios-all/config/conf-default.toml
@@ -13,7 +13,9 @@ default_lang = "zh-cn"
 
 [fw.web_server]
 port = 8080
-[fw.web_server.modules.iam]
+[fw.web_server.modules.iam][fw.web_server.modules.spi-cache]
+title = "缓存存储服务"
+doc_urls = [["test env", "http://localhost:8080/"]]
 title = "IAM Component"
 doc_urls = [["test env", "http://localhost:8080/"]]
 
