spi-stats: Initialization (not completed).

--- a/spi/spi-stats/Cargo.toml
+++ b/spi/spi-stats/Cargo.toml
@@ -20,6 +20,7 @@ spi-pg = ["tardis/reldb-postgres"]
 
 [dependencies]
 serde.workspace = true
+lazy_static.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 
