--- a/services/bios-all/Cargo.toml
+++ b/services/bios-all/Cargo.toml
@@ -19,3 +19,13 @@ tardis = { workspace = true, features = [
 ] }
 bios-iam = { path = "../../support/iam" }
 bios-auth = { path = "../../support/auth" }
+
+bios-basic = { path = "../../basic", features = ["test"] }
+bios-spi-cache = { path = "../../spi/spi-cache" }
+bios-spi-graph = { path = "../../spi/spi-graph" }
+bios-spi-kv = { path = "../../spi/spi-kv" }
+bios-spi-log = { path = "../../spi/spi-log" }
+bios-spi-object = { path = "../../spi/spi-object" }
+bios-spi-reldb = { path = "../../spi/spi-reldb" }
+bios-spi-search = { path = "../../spi/spi-search" }
+bios-spi-stats = { path = "../../spi/spi-stats" }
