spi-stats: Coding kernel logic(not completed).

--- a/spi/spi-stats/Cargo.toml
+++ b/spi/spi-stats/Cargo.toml
@@ -21,6 +21,7 @@ spi-pg = ["tardis/reldb-postgres"]
 [dependencies]
 serde.workspace = true
 lazy_static.workspace = true
+itertools.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 
