--- a/services/bios-all/config/conf-default.toml
+++ b/services/bios-all/config/conf-default.toml
@@ -11,11 +11,17 @@ desc = "BIOS All Services"
 version = "0.1.0"
 default_lang = "zh-cn"
 
+[fw.web_server.modules.spi-cache]
+[fw.web_server.modules.spi-kv]
+[fw.web_server.modules.spi-log]
+[fw.web_server.modules.spi-object]
+[fw.web_server.modules.spi-reldb]
+[fw.web_server.modules.spi-search]
+[fw.web_server.modules.spi-stats]
+
 [fw.web_server]
 port = 8080
-[fw.web_server.modules.iam][fw.web_server.modules.spi-cache]
-title = "缓存存储服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+[fw.web_server.modules.iam]
 title = "IAM Component"
 doc_urls = [["test env", "http://localhost:8080/"]]
 
