--- a/services/spi-all/config/conf-default.toml
+++ b/services/spi-all/config/conf-default.toml
@@ -17,6 +17,7 @@ port = 8080
 [fw.web_server.modules.spi-reldb]
 [fw.web_server.modules.spi-search]
 [fw.web_server.modules.spi-stats]
+[fw.web_server.modules.spi-plugin]
 
 [fw.db]
 url = "postgres://postgres:ENC(5892ae51dbeedacdf10ba4c0d7af42a7)@localhost:5432/test"
