--- a/.github/workflows/service-all-push.yml
+++ b/.github/workflows/service-all-push.yml
@@ -7,6 +7,7 @@ on:
       - "support/iam/**"
       - "support/auth/**"
       - "services/**"
+      - "spi/**"
       - ".github/workflows/service-all-push.yml"
 
 jobs:
