--- a/support/iam/Cargo.toml
+++ b/support/iam/Cargo.toml
@@ -18,6 +18,9 @@ path = "src/lib.rs"
 default = ["ldap_server", "ldap_client"]
 ldap_server = ["ldap3_proto", "tardis/future", "tokio-util"]
 ldap_client = ["ldap3"]
+spi_kv_features = []
+spi_search_features = []
+
 
 [dependencies]
 serde.workspace = true
