--- a/.github/workflows/service-all-release.yml
+++ b/.github/workflows/service-all-release.yml
@@ -45,7 +45,7 @@ jobs:
           dockerfile: services/bios-all/Dockerfile
           registry: ghcr.io
           image: bios-serv-all
-          tags: latest
+          tags: ${{ github.ref_name }}
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
@@ -56,6 +56,6 @@ jobs:
           dockerfile: services/bios-all/Dockerfile
           registry: docker.io
           image: ecfront/bios-serv-all
-          tags: latest
+          tags: ${{ github.ref_name }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
