fix: service all push

--- a/.github/workflows/service-all-push.yml
+++ b/.github/workflows/service-all-push.yml
@@ -8,6 +8,7 @@ on:
       - "support/auth/**"
       - "services/**"
       - "spi/**"
+      - "middleware/**"
       - "Cargo.toml"
       - ".github/workflows/service-all-push.yml"
 
