--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ opt-level = "z"
 [workspace.dependencies]
 # basic
 serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1" }
 async-trait = { version = "0.1" }
 lazy_static = { version = "1" }
 itertools = { version = "0" }
