--- a/support/enhance-wasm/Cargo.toml
+++ b/support/enhance-wasm/Cargo.toml
@@ -40,5 +40,8 @@ getrandom.workspace = true
 rand = { version = "0.8" }
 rand_core = { version = "0.6" }
 
+#[cfg(not(target_arch = "wasm32"))]
+serde_json.workspace = true
+
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
