--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,11 +62,12 @@ web-sys = { version = "0", features = [
     'Headers',
     'Request',
     'RequestInit',
+    'RequestCredentials',
     'RequestMode',
     'Response',
     'Window',
     'console',
     'BroadcastChannel',
-    'Storage'
+    'Storage',
 ] }
 wasm-bindgen-test = { version = "0" }
