--- a/support/enhance-wasm/Cargo.toml
+++ b/support/enhance-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bios-enhance-wasm"
-version.workspace = true
+version = "0.1.3"
 authors.workspace = true
 homepage.workspace = true
 documentation.workspace = true
@@ -35,7 +35,6 @@ base64.workspace = true
 hex.workspace = true
 libsm.workspace = true
 num-bigint.workspace = true
-getrandom.workspace = true
 # TODO
 rand = { version = "0.8" }
 rand_core = { version = "0.6" }
