--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ tardis = { version = "0.1.0-beta3" }
 # crypto
 base64 = { version = "0.21" }
 hex = { version = "0.4" }
-libsm = { version = "0.5" }
+libsm = { version = "=0.5.0" }
 num-bigint = { version = "0.4.3" }
 
 # wasm
@@ -70,3 +70,4 @@ web-sys = { version = "0", features = [
     'Storage',
 ] }
 wasm-bindgen-test = { version = "0" }
+getrandom = { version = "^0.2", features = ["js"] }
