--- a/support/enhance-wasm/Cargo.toml
+++ b/support/enhance-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bios-enhance-wasm"
-version = "0.1.3"
+version = "0.1.4"
 authors.workspace = true
 homepage.workspace = true
 documentation.workspace = true
@@ -14,9 +14,6 @@ publish.workspace = true
 name = "bios_enhance_wasm"
 path = "src/lib.rs"
 crate-type = ["cdylib", "rlib"]
-
-[profile.release]
-opt-level = "s"
 
 [dependencies]
 serde.workspace = true
@@ -35,6 +32,7 @@ base64.workspace = true
 hex.workspace = true
 libsm.workspace = true
 num-bigint.workspace = true
+getrandom.workspace = true
 # TODO
 rand = { version = "0.8" }
 rand_core = { version = "0.6" }
