--- a/support/iam/Cargo.toml
+++ b/support/iam/Cargo.toml
@@ -41,7 +41,8 @@ bios-basic = { path = "../../basic", features = ["default", "with-mq"] }
 ldap3_proto = { version = "0.3", optional = true }
 tokio-util = { version = "0.7", optional = true }
 ldap3 = { version = "0.11", optional = true }
-
+# todo Wait for tardis field to upgrade during removal
+nanoid = { version = "0.4" }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
