--- a/middleware/schedule/Cargo.toml
+++ b/middleware/schedule/Cargo.toml
@@ -29,3 +29,5 @@ bios-basic = { path = "../../basic", features = ["default"] }
 tokio-cron-scheduler = "*"
 tardis = { workspace = true, features = ["test", "ws-client"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
+bios-spi-kv = { path = "../../spi/spi-kv" }
+bios-spi-log = { path = "../../spi/spi-log" }
