enhance error handling 1. removed most unwrap call 2. cargo fmt | cargo clippy fix

--- a/middleware/schedule/tests/config/conf-default.toml
+++ b/middleware/schedule/tests/config/conf-default.toml
@@ -71,3 +71,9 @@ doc_urls = [["test env", "http://localhost:8080/"]]
 [fw.web_server.modules.spi-log]
 [fw.web_server.modules.schedule]
 
+[fw.cache]
+enabled = true
+type = "redis"
+
+[fw.db]
+enabled = true
