--- a/spi/spi-conf/Cargo.toml
+++ b/spi/spi-conf/Cargo.toml
@@ -20,9 +20,13 @@ spi-pg = ["tardis/reldb-postgres"]
 
 [dependencies]
 serde.workspace = true
-tardis = { workspace = true, features = ["reldb-postgres", "web-server", "crypto"] }
+tardis = { workspace = true, features = [
+    "reldb-postgres",
+    "web-server",
+    "crypto",
+] }
 bios-basic = { path = "../../basic", features = ["default"] }
-
+lazy_static = { workspace = true }
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
