fix: schedual can't delete task from kv

--- a/middleware/schedule/tests/config/conf-default.toml
+++ b/middleware/schedule/tests/config/conf-default.toml
@@ -5,7 +5,7 @@
 [csm.schedule]
 kv_url = "https://127.0.0.1:8080/spi-kv"
 log_url = "https://127.0.0.1:8080/spi-log"
-
+spi_app_id = "app001"
 [fw.web_server]
 enabled = true
 port = 8080
