cargo ignore ignore.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
     "basic",
     "spi/*",
     "gateway/test",
-    "middleware/*",
+    "middleware/event",
+    "middleware/schedule",
     "support/iam",
     "support/auth",
     "support/enhance-wasm",
