--- a/services/bios-all/Dockerfile
+++ b/services/bios-all/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM mineman/ubuntu:openssl1.1.1t
 
 ENV TZ=Asia/Shanghai
 
@@ -10,6 +10,16 @@ RUN apt-get update && \
 RUN apt install -y --reinstall ca-certificates
 RUN update-ca-certificates -f
 RUN  echo 'ca_certificate=/etc/ssl/certs/ca-certificates.crt'  >> /root/.wgetrc 
+
+RUN sed -i '1i\openssl_conf = default_conf' /usr/lib/ssl/openssl.cnf
+RUN echo '[ default_conf ] \n\
+ssl_conf = ssl_sect \n\
+[ssl_sect] \n\
+system_default = system_default_sect \n\
+[system_default_sect] \n\
+MinProtocol = TLSv1 \n\
+CipherString = DEFAULT:@SECLEVEL=1 \n'\
+>>/usr/lib/ssl/openssl.cnf
 
 WORKDIR /bios
 
