--- a/support/enhance-wasm/Cargo.toml
+++ b/support/enhance-wasm/Cargo.toml
@@ -19,26 +19,40 @@ crate-type = ["cdylib", "rlib"]
 serde.workspace = true
 lazy_static.workspace = true
 
-console_error_panic_hook.workspace = true
-# TODO
-wee_alloc.workspace = true
-wasm-bindgen.workspace = true
-serde-wasm-bindgen.workspace = true
-wasm-bindgen-futures.workspace = true
-js-sys.workspace = true
-web-sys.workspace = true
+# crypto
+base64 = { version = "0.21" }
+hex = { version = "0.4" }
+libsm = { version = "=0.5.0" }
+num-bigint = { version = "0.4.3" }
 
-base64.workspace = true
-hex.workspace = true
-libsm.workspace = true
-num-bigint.workspace = true
-getrandom.workspace = true
+# wasm
+console_error_panic_hook = { version = "0" }
+wee_alloc = { version = "0" }
+wasm-bindgen = { version = "0", features = ["serde-serialize"] }
+wasm-bindgen-futures = { version = "0" }
+serde-wasm-bindgen = { version = "0" }
+js-sys = { version = "0" }
+web-sys = { version = "0", features = [
+    'Headers',
+    'Request',
+    'RequestInit',
+    'RequestCredentials',
+    'RequestMode',
+    'Response',
+    'Window',
+    'console',
+    'BroadcastChannel',
+    'Storage',
+] }
+wasm-bindgen-test = { version = "0" }
+#getrandom = { version = "^0.2", features = ["js"] }
+
 # TODO
 rand = { version = "0.8" }
 rand_core = { version = "0.6" }
 
 #[cfg(not(target_arch = "wasm32"))]
-serde_json.workspace = true
+serde_json = { workspace = true}
 
 [dev-dependencies]
-wasm-bindgen-test = { workspace = true }
+wasm-bindgen-test = { version = "0" }
