--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ members = [
     "basic",
     "spi/*",
     "gateway/test",
-    "middleware/event",
-    "middleware/schedule",
+    "middleware/*",
     "support/iam",
     "support/auth",
     "support/enhance-wasm",
