--- a/spi/spi-stats/Cargo.toml
+++ b/spi/spi-stats/Cargo.toml
@@ -15,9 +15,8 @@ name = "bios_spi_stats"
 path = "src/lib.rs"
 
 [features]
-default = ["spi-pg", "preserve_order"]
+default = ["spi-pg"]
 spi-pg = ["tardis/reldb-postgres"]
-preserve_order = []
 
 [dependencies]
 bios-basic = { path = "../../basic", features = ["default"] }
