--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ members = [
     "basic",
     "spi/*",
     "gateway/test",
-    "middleware/event",
-    "middleware/schedule",
-    "middleware/flow",
+    "middleware/*",
     "support/iam",
     "support/auth",
     "support/enhance-wasm",
