--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "basic",
     "spi/*",
     "gateway/test",
+    "gateway/spacegateway",
     "middleware/*",
     "support/iam",
     "support/auth",
