--- a/spi/spi-search/Cargo.toml
+++ b/spi/spi-search/Cargo.toml
@@ -17,10 +17,11 @@ path = "src/lib.rs"
 [features]
 default = ["spi-pg"]
 spi-pg = ["tardis/reldb-postgres"]
+spi-es = ["tardis/web-client"]
 
 [dependencies]
 serde.workspace = true
-tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
+tardis = { workspace = true, features = ["reldb-postgres", "web-server", "web-client"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 
 [dev-dependencies]
