--- a/spi/spi-search/Cargo.toml
+++ b/spi/spi-search/Cargo.toml
@@ -15,7 +15,7 @@ name = "bios_spi_search"
 path = "src/lib.rs"
 
 [features]
-default = ["spi-pg"]
+default = ["spi-es"]
 spi-pg = ["tardis/reldb-postgres"]
 spi-es = ["tardis/web-client"]
 
