--- a/gateway/spacegateway/Cargo.toml
+++ b/gateway/spacegateway/Cargo.toml
@@ -14,6 +14,7 @@ publish.workspace = true
 
 [dependencies]
 serde.workspace = true
+lazy_static.workspace = true
 
 spacegate-kernel = { version = "0.1.0-alpha.2", features = [
     "ws",
@@ -23,3 +24,7 @@ spacegate-kernel = { version = "0.1.0-alpha.2", features = [
 ], path = "../../../spacegate/kernel" }
 bios-auth = { path = "../../support/auth" }
 tardis = { workspace = true, features = ["web-server", "web-client"] }
+
+[dev-dependencies]
+tardis = { workspace = true, features = ["test", "web-client"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
