spi-conf: compatible with nacos api (#302)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ run_script = { version = "0.10" }
 # tardis
 tardis = { version = "=0.1.0-beta.10" }
 # tardis = { paths = "../tardis/tardis" }
+# tardis = { git = "https://github.com/ideal-world/tardis.git" }
