--- a/spi/spi-conf/tests/config/conf-nacos.toml
+++ b/spi/spi-conf/tests/config/conf-nacos.toml
@@ -66,4 +66,7 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 [fw.web_server.modules.spi-conf]
 title = "配置服务"
 doc_urls = [["test env", "http://localhost:8080/"]]
+uniform_error = true
+[fw.web_server.modules.spi-conf-nacos]
+title = "配置nacos服务"
 uniform_error = false
