--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,6 @@ fancy-regex = { version = "0" }
 run_script = { version = "0.10" }
 
 # tardis
-#tardis = { version = "=0.1.0-beta.10" }
-tardis = { path = "../tardis/tardis" }
+tardis = { version = "=0.1.0-beta.10" }
+#tardis = { path = "../tardis/tardis" }
 # tardis = { git = "https://github.com/ideal-world/tardis.git" }
