search: add es support (#316)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,5 +47,5 @@ run_script = { version = "0.10" }
 
 # tardis
 tardis = { version = "=0.1.0-beta.11" }
-# tardis = { paths = "../tardis/tardis" }
+# tardis = { path = "../tardis/tardis" }
 # tardis = { git = "https://github.com/ideal-world/tardis.git" }
