--- a/spi/spi-reach/Cargo.toml
+++ b/spi/spi-reach/Cargo.toml
@@ -21,6 +21,8 @@ serde.workspace = true
 lazy_static.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
+strum = "0.25"
+strum_macros = "0.25"
 [dev-dependencies]
 tardis = { workspace = true, features = ["test"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
