--- a/middleware/flow/Cargo.toml
+++ b/middleware/flow/Cargo.toml
@@ -22,7 +22,9 @@ lazy_static.workspace = true
 itertools.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-client"] }
 bios-basic = { path = "../../basic", features = ["default"] }
+bios-sdk-invoke = { path = "../../sdk/invoke", features = ["default"] }
 
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "web-client"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
+bios-sdk-invoke = { path = "../../sdk/invoke", features = ["default"] }
