--- a/middleware/schedule/Cargo.toml
+++ b/middleware/schedule/Cargo.toml
@@ -21,12 +21,14 @@ spi-pg = ["tardis/reldb-postgres"]
 [dependencies]
 serde.workspace = true
 lazy_static.workspace = true
-tokio-cron-scheduler = "*"
+# tokio-cron-scheduler = "*"
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
-
+[dependencies.tokio-cron-scheduler]
+git = "https://github.com/4t145/tokio-cron-scheduler.git"
+branch = "time-local"
+features = ["cron_local"]
 [dev-dependencies]
-tokio-cron-scheduler = "*"
 tardis = { workspace = true, features = ["test", "ws-client"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
 bios-spi-kv = { path = "../../spi/spi-kv" }
