--- a/gateway/spacegateway/Cargo.toml
+++ b/gateway/spacegateway/Cargo.toml
@@ -15,16 +15,23 @@ publish.workspace = true
 [dependencies]
 serde.workspace = true
 lazy_static.workspace = true
+bios-sdk-invoke = { path = "../../sdk/invoke", features = ["spi_log"] }
 
-spacegate-kernel = { version = "0.1.0-alpha.3", features = [
+# spacegate-kernel = { version = "0.1.0-alpha.3", features = [
+#     "ws",
+#     "cache",
+#     "k8s",
+# ] }
+spacegate-kernel = { path = "../../../spacegate/kernel", features = [
     "ws",
     "cache",
     "k8s",
 ] }
-# spacegate-kernel = { path = "../../../spacegate/kernel" }
+
 bios-auth = { path = "../../support/auth" }
 tardis = { workspace = true, features = ["web-server", "web-client"] }
 
 [dev-dependencies]
 tardis = { workspace = true, features = ["test", "web-client"] }
+
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
